Added add to cart javascript logic

--- a/src/store/templates/store/main.html
+++ b/src/store/templates/store/main.html
@@ -11,6 +11,28 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <script type="text/javascript">
+      var user = "{{ request.user }}";
+
+      function getToken(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== "") {
+          const cookies = document.cookie.split(";");
+          for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === name + "=") {
+              cookieValue = decodeURIComponent(
+                cookie.substring(name.length + 1)
+              );
+              break;
+            }
+          }
+        }
+        return cookieValue;
+      }
+      const csrftoken = getToken("csrftoken");
+    </script>
     <title>{% block title %}{% endblock title %}</title>
   </head>
 
@@ -43,7 +65,7 @@
           <a href="{% url 'cart' %}">
             <img id="cart-icon" src="{% static 'images/cart.png' %}" />
           </a>
-          <p id="cart-total">0</p>
+          <p id="cart-total">{{ cart_quantity }}</p>
         </div>
       </div>
     </nav>
@@ -68,5 +90,6 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
   </body>
 </html>
