Added logic for payment options

--- a/src/store/templates/store/main.html
+++ b/src/store/templates/store/main.html
@@ -65,7 +65,7 @@
           <a href="{% url 'cart' %}">
             <img id="cart-icon" src="{% static 'images/cart.png' %}" />
           </a>
-          <p id="cart-total">{{ cart_quantity }}</p>
+          <p id="cart-total">{{ cartItems }}</p>
         </div>
       </div>
     </nav>
