--- a/src/store/templates/store/cart.html
+++ b/src/store/templates/store/cart.html
@@ -2,8 +2,8 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="box-element">
-      <a class="btn btn-outline-dark" href="{% url 'store' %}">
-        &#x2190; Continue Shoping
+      <a class="btn btn-outline-dark" href="{% url 'store' %}"
+        >← Continue Shoping
       </a>
       <br />
       <br />
