--- a/src/store/templates/store/checkout.html
+++ b/src/store/templates/store/checkout.html
@@ -86,7 +86,7 @@
   </div>
   <div class="col-lg-6">
     <div class="box-element">
-      <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190 Back to Cart</a>
+      <a class="btn btn-outline-dark" href="{% url 'cart' %}">← Back to Cart</a>
       <hr />
       <h3>Order Summary</h3>
       <hr />
@@ -110,7 +110,7 @@
 
 <script type="text/javascript">
   var shipping = "{{ order.shipping }}";
-  var total = '{{ order.get_cart_total }}'
+  var total = "{{ order.get_cart_total }}";
 
   if (shipping == "False") {
     document.getElementById("shipping-info").innerHTML = "";
@@ -135,7 +135,6 @@
     document.getElementById("form-button").classList.add("hidden");
     document.getElementById("payment-info").classList.remove("hidden");
   });
-
   document
     .getElementById("make-payment")
     .addEventListener("click", function (e) {
@@ -146,42 +145,44 @@
     console.log("Payment button clicked");
 
     var userFormData = {
-        'name':null,
-        'email':null,
-        'total':total
-    }
+      name: null,
+      email: null,
+      total: total,
+    };
     var shippingInfo = {
-        'address':null,
-        'city':null,
-        'state':null,
-        'zipcode':null
+      address: null,
+      city: null,
+      state: null,
+      zipcode: null,
+    };
+    if (shipping != "False") {
+      shippingInfo.address = form.address.value;
+      shippingInfo.city = form.city.value;
+      shippingInfo.state = form.state.value;
+      shippingInfo.zipcode = form.zipcode.value;
     }
-    if (shipping != 'False'){
-        shippingInfo.address = form.address.value
-        shippingInfo.city = form.city.value
-        shippingInfo.state = form.state.value
-        shippingInfo.zipcode = form.zipcode.value
+    if (user == "AnonymousUser") {
+      userFormData.name = form.name.value;
+      userFormData.email = form.email.value;
     }
-    if (user == 'AnonymousUser'){
-        userFormData.name = form.name.value
-        userFormData.email = form.email.value
-    }
-    var url = '/process_order/'
-    fetch(url,{
-        method:'POST',
-        mode: "same-origin",
-        headers: {
-            "Content-Type": "application/json",
-            "X-CSRFToken": csrftoken
-        },
-        body: JSON.stringify({ form: userFormData, shipping: shippingInfo }),
-     })
-     .then((response) => response.json())
-     .then((data) => {
-         console.log("Success", data);
-         alert("Transaction completed");
-         window.location.href = "{% url 'store' %}"
-     })
+    var url = "/process_order/";
+    fetch(url, {
+      method: "POST",
+      mode: "same-origin",
+      headers: {
+        "Content-Type": "application/json",
+        "X-CSRFToken": csrftoken,
+      },
+      body: JSON.stringify({ form: userFormData, shipping: shippingInfo }),
+    })
+      .then((response) => response.json())
+      .then((data) => {
+        console.log("Success", data);
+        alert("Transaction completed");
+        cart = {};
+        document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/";
+        window.location.href = "{% url 'store' %}";
+      });
   }
 </script>
 {% endblock body %}
