--- a/src/store/templates/store/main.html
+++ b/src/store/templates/store/main.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="en">
   <head>
+    <title>{% block title %}{% endblock title %}</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -11,31 +12,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <script src="{% static "js/getToken.js" %}"></script>
+    <script src="{% static "js/getCart.js" %}"></script>
     <script type="text/javascript">
-      var user = "{{ request.user }}";
-
-      function getToken(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== "") {
-          const cookies = document.cookie.split(";");
-          for (let i = 0; i < cookies.length; i++) {
-            const cookie = cookies[i].trim();
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) === name + "=") {
-              cookieValue = decodeURIComponent(
-                cookie.substring(name.length + 1)
-              );
-              break;
-            }
-          }
-        }
-        return cookieValue;
-      }
-      const csrftoken = getToken("csrftoken");
+      const user = "{{ request.user }}";
     </script>
-    <title>{% block title %}{% endblock title %}</title>
   </head>
-
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="{% url 'store' %}">Ecom</a>
